# test

./: CWORK.c  GameField.cpp  GameField.h  Makefile  Makefile (1).txt  README.md  Ship.cpp  ShipManager.h  Snigirev_AA_lb5.docx  Snigirev_AA_lb6.docx  Snigirev_AA_lb7.docx  Snigirev_Aleksandr_alg1.docx  Snigirev_OOP_lb2.docx  Snigirev_OOP_lb3.docx  Snigirev_OOP_lb4.docx  bot.py  config.py  cw.c  double_double.cpp  functions.py  graphics.py  history.py  kb.py  main.c  main.cpp  notify.py  que_arr.c  queue.c  stack.c  stack_arr.c  test.py
AltExam/: README.md  config.py  main.py  tests.py
OOP1_ispr/: Snigirev_OOP_lb1.docx
Practice/TSP/: CMakeLists.txt  gui.cpp  gui.h  gui.ui  main.cpp  rapidcsv.h  town.h  towndataparser.cpp  towndataparser.h  tsp.cpp  tsp.h
Snigirev_Aleksandr_cw/: Snigirev_Aleksandr_cw.docx
Snigirev_Aleksandr_lb2/: Snigirev_Akeksandr_lb2.docx  tech_script.sh
Snigirev_Aleksandr_lb3/: Snigirev_Aleksandr_lb3.docx
Snigirev_Aleksandr_lb4/: Snigirev_Aleksandr_lb4.docx
files/: config.ini  data.csv  requirements.txt  users.csv
lb1/: Snigirev_Aleksandr_lb1.docx  main.cpp
lb2/: Snigirev_Aleksandr_lb2.docx
lb3/: Snigirev_Aleksandr_lb3.docx  VagnerFisher.cpp  VagnerFisherTwo.cpp  t.txt
lb4/: Snigirev_Aleksandr_lb4.docx
lb5/: Snigirev_Aleksandr_piaa1.docx  aho_corasick.py
p64/: clone_behave.c  clone_test.txt
skills/: AbilityFactory.h  AbilityManager.cpp  AbilityManager.h  Bombardment.cpp  DoubleDamage.cpp  DoubleDamage.h  Scanner.cpp  Scanner.h
src/: Game.cpp  Game.h  GameExceptions.h  GameField.cpp  GameField.h  GameState.cpp  GameState.h  (+20 more)
(+192 files in other folders)
